# OOP-MyProjects

OOP Semester Project/OOP SEMESTER PROJECT/OOP SEMESTER PROJECT/: CMakeLists.txt  Coach.cpp  Coach.h  Controller.cpp  Controller.h  FieldPlayer.cpp  FieldPlayer.h  OOP SEMESTER PROJECT.vcxproj  OOP SEMESTER PROJECT.vcxproj.filters  Repository.cpp  Repository.h  Staff.cpp  Staff.h  TestClasses.cpp  TestClasses.h  Text_in.txt  UI.cpp  UI.h  main.cpp
OOP Semester Project/OOP SEMESTER PROJECT/OOP SEMESTER PROJECT/Debug/: OOP SEMESTER PROJECT.exe.recipe  vc142.idb
OOP Semester Project/OOP SEMESTER PROJECT/OOP SEMESTER PROJECT/Debug/OOP SEME.39b609f8.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  OOP SEMESTER PROJECT.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
OOP Semester Project/OOP SEMESTER PROJECT/OOP SEMESTER PROJECT/Doxygen Stuffs/: Doxyfile  doxygen_log.txt
OOP Semester Project/OOP SEMESTER PROJECT/OOP SEMESTER PROJECT/Doxygen Stuffs/html/: _coach_8h_source.html  _controller_8h_source.html  _field_player_8h_source.html  _repository_8h_source.html  _staff_8h_source.html  _test_classes_8h_source.html  _u_i_8h_source.html  annotated.html  class_coach-members.html  class_coach.html  class_controller-members.html  class_controller.html  class_field_player-members.html  class_field_player.html  class_repository-members.html  class_repository.html  class_staff-members.html  class_staff.html  class_test_classes-members.html  class_test_classes.html  class_u_i-members.html  class_u_i.html  classes.html  files.html  hierarchy.html  (+1 more)
(+82 files in other folders)
